# fractal-pyrs

./: .gitignore  README.md  main.py
fractal_pyrs/: Cargo.toml
fractal_pyrs/src/: lib.rs
